apps/ingress/overlays/production/ingress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress
spec:
  selector:
    matchLabels:
      app: ingress
      tier: api
  replicas: 3
  template:
    metadata:
      labels:
        app: ingress
        tier: api
    spec:
      containers:
      - name: ingress
        image: quicklookup/ingress:v1.0.58
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 2222
          name: sftp
        restartPolicy: Never
        volumeMounts:
          - mountPath: /tmp
            name: sftp
      imagePullSecrets:
        - name: dockerlock
      volumes:
        - name: sftp
          hostPath:
            path: /data/local/sftp
